# nightcrawler-ds-pipeline

./: .coverage.Mac.5319.XMwtwbxx  .env_template  .gitignore  README.md  WIP.md  pyproject.toml  s06_delivery_page_detection.ipynb
.github/workflows/: ci.yml  docker.yml
demo/: app.py
docker/: Dockerfile  function_app.py  host.json  requirements.txt
nightcrawler/: .gitignore  Dockerfile  __main__.py  base.py  contex.py  context.py  evaluate_country_filtering_and_delivery_policy.py  isp_transformation_script.py  organizations.json  settings.py  utils.py
nightcrawler/cli/: extractor.py  full_pipeline.py  main.py  processor.py  version.py
nightcrawler/extract/: datacollector.py  s01_enriched_keywords.py  s01_reverse_image_search.py  s01_serp_api.py  s02_enriched_keywords.py  s02_zyte.py  s03_google_lens_search.py  s03_reverse_image_search.py  s04_zyte.py  serp_api.py  zyte.py
nightcrawler/helpers/: __init__.py  context.py  decorators.py  settings.py  utils.py  utils_io.py  utils_path.py  utils_strings.py
nightcrawler/logic/: s00_base.py  s01_serp.py  s01_zyte.py  s03_page_type_detection.py
nightcrawler/process/: dataprocessor.py  filter_swiss_result.py  s03_dataprocessor.py  s04_filter_swiss_result.py  s05_country_filterer.py  s05_dataprocessor.py  s05_delivery_page_detection.py  s06_delivery_page_detection.py  s06_old_delivery_page_detection.py  s06_page_type_detection.py  s07_blocket_content_detection.py  s07_page_type_detection.py  s08_blocket_content_detection.py  s08_content_domain_detection.py  s08_corrupted_content_detection.py  s09_content_domain_detection.py  s09_suspiciousness_classifier.py  s10_result_ranker.py  s10_suspiciousness_classifier.py  s11_result_ranker.py
tests/: evaluate_country_filtering_and_delivery_policy.py  organizations.json
tests/smoke/: test_full_pipeline.py
tests/unit/: test_cli_main.py  test_content_domain_detection.py  test_corrupted_content_detection.py  test_country_filtering.py  test_delivery_policy_extraction.py  test_extract_serpapi.py  test_extract_serpapi_google_lens_search.py  test_extract_serpapi_reverse_image_search.py  test_extract_zyte.py  test_keyword_enrichement.py  test_page_type_detection.py  (+3 more)
(+18 files in other folders)
