[tool.poetry]
name = "nightcrawler-ds-pipeline"
version = "v0.0.1"
description = ""
authors = ["alho94 <alexander.horst@swissmedic.ch>",
           "nicoapg <nicolas.perezgonzalez@swissmedic.ch>"]
readme = "README.md"
packages = [{include = "nightcrawler"}]

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.1"
helpers = {git = "https://github.com/smc40/nightcrawler-ds-helpers", tag = "v0.1.3"}

pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
