[tool.poetry]
name = "nightcrawler-ds-pipeline"
version = "v0.0.1"
description = ""
authors = ["alho94 <alexander.horst@swissmedic.ch>",
           "nicoapg <nicolas.perezgonzalez@swissmedic.ch>"]
readme = "README.md"
packages = [{include = "nightcrawler"}]

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.1"
helpers = {git = "https://github.com/smc40/nightcrawler-ds-helpers", tag = "v0.3.0"}
libnightcrawler = {git = "ssh://git@github.com/smc40/nightcrawler-library.git", rev = "0.4.2"}

pytest = "^8.3.2"
pytest-cov = "^5.0.0"
bandit = "^1.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
