[tool.poetry]
name = "nightcrawler-ds-pipeline"
version = "v0.0.1"
description = ""
authors = ["alho94 <alexander.horst@swissmedic.ch>",
           "nicoapg <nicolas.perezgonzalez@swissmedic.ch>"]
readme = "README.md"
packages = [{include = "nightcrawler"}]

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.1"
libnightcrawler = {git = "ssh://git@github.com/smc40/nightcrawler-library.git", rev = "0.7.1"}

pytest = "^8.3.2"
pytest-cov = "^5.0.0"
bandit = "^1.7.9"
openai = "^1.53.0"
flake8 = "^7.1.1"
black = "^24.10.0"
mistralai = "^1.1.0"
pydantic-settings = "^2.6.0"
pydantic = "^2.9.2"
google-search = "^1.1.1"
tqdm = "^4.66.6"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"
pandas = "^2.2.3"
nest-asyncio = "^1.6.0"
aiohttp = "^3.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
